--- a/start.html
+++ b/start.html
@@ -38,12 +38,18 @@
             <div class="widget-box">
                 <div class="widget-title">CENTRE MULTIMÉDIA</div>
                 <div class="shortcut-grid">
-                    <a href="https://www.youtube.com" target="_blank" class="btn-short btn-yt">YOUTUBE</a>
                     <a href="https://www.netflix.com" target="_blank" class="btn-short btn-nfx">NETFLIX</a>
                     <a href="https://www.primevideo.com" target="_blank" class="btn-short btn-amz">PRIME VIDEO</a>
                     <a href="https://www.disneyplus.com" target="_blank" class="btn-short btn-dis">DISNEY+</a>
+                    <a href="https://www.max.com" target="_blank" class="btn-short btn-hbo">HBO MAX</a>
                     <a href="https://open.spotify.com" target="_blank" class="btn-short btn-spt">SPOTIFY</a>
+                    <a href="https://www.youtube.com" target="_blank" class="btn-short btn-yt">YOUTUBE</a>
+                    <a href="https://music.youtube.com/" target="_blank" class="btn-short btn-yt">YOUTUBE MUSIC</a>
+                    <a href="https://discord.com/channels/@me" target="_blank" class="btn-short btn-dis">DISCORD</a>
                     <a href="https://www.twitch.tv" target="_blank" class="btn-short btn-twh">TWITCH</a>
+                    <a href="https://steamcommunity.com" target="_blank" class="btn-short btn-stm">STEAM</a>
+                    <a href="https://www.canva.com" target="_blank" class="btn-short btn-canva">CANVA</a>
+                    <a href="https://www.tiktok.com" target="_blank" class="btn-short btn-tk">TIKTOK</a>
                 </div>
             </div>
 
@@ -123,7 +129,7 @@
                 <form action="https://www.google.com/search" method="GET" class="search-form" onsubmit="clearSearch()">
                     <div class="search-logo-box">
                         <a href="https://www.google.com/">
-                            <img src="https://www.google.com/images/branding/googleg/1x/googleg_standard_color_128dp.png" alt="G" class="google-icon-futuristic">
+                            <img src="images/google-cyber.png" alt="Google Cyber" class="google-icon-futuristic neon-boost">
                         </a>
                     </div>
                     <input type="text" id="search-input" name="q" placeholder="ENTREZ VOTRE RECHERCHE..." autofocus>
@@ -200,44 +206,44 @@
             <div class="widget-box">
                 <div class="widget-title">Explorateur</div>
                 <div class="shortcut-grid">
-                    <a href="file:///C:/Users/Vassili Flerianos/Documents/" class="btn-short">Documents</a>
-                    <a href="file:///C:/Users/Vassili Flerianos/Downloads/" class="btn-short">Téléchargement</a>
-                    <a href="file:///C:/Users/Vassili Flerianos/Pictures/" class="btn-short">Images</a>
-                    <a href="file:///C:/Users/Vassili Flerianos/Videos/" class="btn-short">Vidéos</a>
-                    <a href="file:///C:/Users/Vassili Flerianos/Music/" class="btn-short">Musique</a>
-                    <a href="file:///E:/Vuze Downloads" class="btn-short">Vuze Download</a>
-                    <a href="file:///C:/Program Files" class="btn-short">Programmes</a>
-                    <a href="file:///C:/" class="btn-short">Disque C:</a>
+                    <a href="file:///C:/Users/Vassili Flerianos/Documents/" class="btn-short btn-doc">Documents</a>
+                    <a href="file:///C:/Users/Vassili Flerianos/Downloads/" class="btn-short btn-dl">Téléchargement</a>
+                    <a href="file:///C:/Users/Vassili Flerianos/Pictures/" class="btn-short btn-img">Images</a>
+                    <a href="file:///C:/Users/Vassili Flerianos/Videos/" class="btn-short btn-vid">Vidéos</a>
+                    <a href="file:///C:/Users/Vassili Flerianos/Music/" class="btn-short btn-mus">Musique</a>
+                    <a href="file:///E:/Vuze Downloads" class="btn-short btn-vuze">Vuze Download</a>
+                    <a href="file:///C:/Program Files" class="btn-short btn-prog">Programmes</a>
+                    <a href="file:///C:/" class="btn-short btn-disk">Disque C:</a>
                 </div>
-            </div>    
+            </div>   
 
             <div class="widget-box">
                 <div class="widget-title">Gestion Système</div>
                 <div class="shortcut-grid">
-                    <a href="ms-settings:" class="btn-short">Paramètres</a>
-                    <a href="ms-settings:display" class="btn-short">Écran</a>
-                    <a href="ms-settings:display-advancedgraphics" class="btn-short">Paramètres Graphiques</a>
-                    <a href="ms-settings:sound" class="btn-short">Son</a>
-                    <a href="ms-settings:apps-volume" class="btn-short">Mélangeur de volume</a>
-                    <a href="ms-settings:mousetouchpad" class="btn-short">Souris</a>
-                    <a href="ms-settings:appsfeatures" class="btn-short">Application</a>
-                    <a href="ms-settings:personalization" class="btn-short">Thèmes</a>
-                    <a href="ms-settings:bluetooth" class="btn-short">Bluetooth</a>
-                    <a href="ms-settings:network-ethernet" class="btn-short">Ethernet</a>
-                    <a href="ms-settings:network-wifi" class="btn-short">Wi-Fi</a>
-                    <a href="ms-settings:storagesense" class="btn-short">Stockage</a>
-                    <a href="ms-settings:windowsdefender" class="btn-short">Sécurité</a>
-                    <a href="ms-settings:windowsupdate" class="btn-short">Windows Updates</a>
+                    <a href="ms-settings:" class="btn-short btn-settings">Paramètres</a>
+                    <a href="ms-settings:display" class="btn-short btn-display">Écran</a>
+                    <a href="ms-settings:display-advancedgraphics" class="btn-short btn-gpu">Graphiques</a>
+                    <a href="ms-settings:sound" class="btn-short btn-sound">Son</a>
+                    <a href="ms-settings:apps-volume" class="btn-short btn-vol">Mélangeur</a>
+                    <a href="ms-settings:mousetouchpad" class="btn-short btn-mouse">Souris</a>
+                    <a href="ms-settings:appsfeatures" class="btn-short btn-apps">Applications</a>
+                    <a href="ms-settings:personalization" class="btn-short btn-theme">Thèmes</a>
+                    <a href="ms-settings:bluetooth" class="btn-short btn-bt">Bluetooth</a>
+                    <a href="ms-settings:network-ethernet" class="btn-short btn-eth">Ethernet</a>
+                    <a href="ms-settings:network-wifi" class="btn-short btn-wifi">Wi-Fi</a>
+                    <a href="ms-settings:storagesense" class="btn-short btn-hd">Stockage</a>
+                    <a href="ms-settings:windowsdefender" class="btn-short btn-secu">Sécurité</a>
+                    <a href="ms-settings:windowsupdate" class="btn-short btn-update">Updates</a>
                 </div>
-            </div>    
+            </div> 
 
             <div class="widget-box">
                 <div class="widget-title">Maintenance</div>
                 <div class="shortcut-grid">
-                    <a href="ms-settings:troubleshoot" class="btn-short">Dépannage</a>
-                    <a href="ms-settings:recovery" class="btn-short">Récupérer</a>
-                    <a href="ms-settings:storagesense" class="btn-short">Optimiser</a>
-                    <a href="ms-settings:about" class="btn-short">Infos PC</a>
+                    <a href="ms-settings:troubleshoot" class="btn-short btn-fix">Dépannage</a>
+                    <a href="ms-settings:recovery" class="btn-short btn-recov">Récupérer</a>
+                    <a href="ms-settings:storagesense" class="btn-short btn-opti">Optimiser</a>
+                    <a href="ms-settings:about" class="btn-short btn-info">Infos PC</a>
                 </div>
             </div>
     
@@ -428,20 +434,68 @@
         document.getElementById('news-stream').innerHTML = news.join('<br>');
     }
 
-    // --- INITIALISATION DES INTERVALLES ---
+// --- 8. EFFET SONORE CYBER (MINIMALISTE & DISCRET) ---
+let audioCtx = null;
+
+function playCyberSound() {
+    if (!audioCtx) audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+    if (audioCtx.state === 'suspended') audioCtx.resume();
+
+    const oscillator = audioCtx.createOscillator();
+    const gainNode = audioCtx.createGain();
+
+    oscillator.type = 'sine'; // Son pur et doux
+    oscillator.frequency.setValueAtTime(1500, audioCtx.currentTime); 
+    
+    gainNode.gain.setValueAtTime(0, audioCtx.currentTime);
+    gainNode.gain.linearRampToValueAtTime(0.05, audioCtx.currentTime + 0.01); // Volume à 5%
+    gainNode.gain.exponentialRampToValueAtTime(0.0001, audioCtx.currentTime + 0.05); 
+
+    oscillator.connect(gainNode);
+    gainNode.connect(audioCtx.destination);
+
+    oscillator.start();
+    oscillator.stop(audioCtx.currentTime + 0.05);
+}
+
+// --- INITIALISATION DES ÉVÉNEMENTS ---
+document.addEventListener('DOMContentLoaded', () => {
+    // A. Son pour les cartes images (Google, Facebook, etc.)
+    const cards = document.querySelectorAll('.card');
+    cards.forEach(card => {
+        card.onmouseenter = () => playCyberSound();
+    });
+
+    // B. Son pour les raccourcis texte (Sidebar)
+    const buttons = document.querySelectorAll('.btn-short');
+    buttons.forEach(btn => {
+        btn.onmouseenter = () => playCyberSound();
+    });
+
+    // C. Son pour le bouton EXÉCUTER de la recherche
+    const execBtn = document.querySelector('.search-form button');
+    if (execBtn) {
+        execBtn.onmouseenter = () => playCyberSound();
+    }
+
+    // Activation de l'audio au premier clic sur la page
+    window.onclick = () => {
+        if (!audioCtx) audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+        audioCtx.resume();
+        console.log("Audio Engine Ready");
+    };
+
+    // Lancement des intervalles
     setInterval(updateClock, 1000);
     setInterval(updateStats, 2000);
     setInterval(updateNetworkActivity, 1000);
-    setInterval(getCrypto, 60000);       
-    setInterval(getRealWeather, 600000); 
+    setInterval(getCrypto, 60000);
+    setInterval(getRealWeather, 600000);
 
-    // Premier lancement
-    updateClock(); 
-    updateStats(); 
-    getRealWeather(); 
-    getCrypto(); 
-    updateNews(); 
-    updateNetworkActivity();
+    // Initialisation immédiate
+    updateClock(); updateStats(); getRealWeather(); getCrypto(); updateNews(); updateNetworkActivity();
+});
 </script>
 </body>
 </html>
+
