--- a/start.html
+++ b/start.html
@@ -176,7 +176,6 @@
                 <div class="stat-row">TEMPÉRATURE CPU: <span id="cpu-temp" style="color:#00ffcc;">--°C</span></div>
                 <div class="shortcut-grid">
                     <a href="javascript:void(0)" id="btn-turbo" class="btn-short btn-turbo-fix" onclick="setPowerMode('TURBO')">MODE TURBO</a>
-                    
                     <a href="javascript:void(0)" id="btn-eco" class="btn-short" onclick="setPowerMode('ECO')">ÉCO MODE</a>
                 </div>
             </div>
@@ -206,14 +205,14 @@
             <div class="widget-box">
                 <div class="widget-title">Explorateur</div>
                 <div class="shortcut-grid">
-                    <a href="file:///C:/Users/Vassili Flerianos/Documents/" class="btn-short btn-doc">Documents</a>
-                    <a href="file:///C:/Users/Vassili Flerianos/Downloads/" class="btn-short btn-dl">Téléchargement</a>
-                    <a href="file:///C:/Users/Vassili Flerianos/Pictures/" class="btn-short btn-img">Images</a>
-                    <a href="file:///C:/Users/Vassili Flerianos/Videos/" class="btn-short btn-vid">Vidéos</a>
-                    <a href="file:///C:/Users/Vassili Flerianos/Music/" class="btn-short btn-mus">Musique</a>
-                    <a href="file:///E:/Vuze Downloads" class="btn-short btn-vuze">Vuze Download</a>
-                    <a href="file:///C:/Program Files" class="btn-short btn-prog">Programmes</a>
-                    <a href="file:///C:/" class="btn-short btn-disk">Disque C:</a>
+                    <a href="C:\Users\Vassili Flerianos\Documents" class="btn-short btn-doc">Documents</a>
+                    <a href="C:\Users\Vassili Flerianos\Downloads" class="btn-short btn-dl">Téléchargement</a>
+                    <a href="C:\Users\Vassili Flerianos\Pictures" class="btn-short btn-img">Images</a>
+                    <a href="C:\Users\Vassili Flerianos\Videos" class="btn-short btn-vid">Vidéos</a>
+                    <a href="C:\Users\Vassili Flerianos\Music" class="btn-short btn-mus">Musique</a>
+                    <a href="E:\Vuze Downloads" class="btn-short btn-vuze">Vuze Download</a>
+                    <a href="C:\Program Files" class="btn-short btn-prog">Programmes</a>
+                    <a href="C:\" class="btn-short btn-disk">Disque C:</a>
                 </div>
             </div>   
 
