--- a/start.html
+++ b/start.html
@@ -193,7 +193,7 @@
         <div class="sidebar sidebar-right">
             <!-- ÉNERGIE & THERMIQUE - CORRIGÉ : BOUTONS SANS HREF, UNIQUEMENT ONCLICK -->
             <div class="widget-box">
-                <div class="widget-title">ÉNERGIE & THERMIQUE</div>
+                <div class="widget-title">ÉNERGIE</div>
                 <div class="shortcut-grid" style="margin-top: 4px;">
                     <button id="btn-turbo" class="btn-short btn-turbo-fix" onclick="setPowerMode('TURBO')">MODE TURBO</button>
                     <button id="btn-eco" class="btn-short" onclick="setPowerMode('ECO')">ÉCO MODE</button>
